Remove personal bio from site configuration
The change comments out the bio text "A student who is actively exploring" in the _config.yml file while keeping other author information intact.

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   # avatar           : "profile.png"
   name             : "Binze Hu(胡彬泽)"
   pronouns         : "he/his"  
-  bio              : "A student who is actively exploring"
+  bio              : # "A student who is actively exploring"
   location         : "China"
   # employer         : "Fudan University"
   # uri              : 
