--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default"
 title                    : "Hu Binze / Personal Homepage"
 title_separator          : "-"
 name                     : &name "Hu Binze"
-description              : &description "personal description"
+description              : &description "a second student from Fudan University"
 url                      : https://tsuki.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Tsuki/Tsuki.github.io"
@@ -27,8 +27,8 @@ author:
   pronouns         : "he/his"  
   bio              : # "A student who is actively exploring"
   location         : "China"
-  # employer         : "Fudan University"
-  # uri              : 
+  employer         : #"Fudan University"
+  uri              : 
   email            : "23302010057@m.fudan.edu.cn" 
 
   Academic websites
