--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,16 @@ title                    : "Hu Binze / Personal Homepage"
 title_separator          : "-"
 name                     : &name "Hu Binze"
 description              : &description "a second student from Fudan University"
-url                      : https://tsuki.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://tsuki-lws.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "Tsuki/Tsuki.github.io"
+repository               : "Tsuki/Tsuki-lws.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  # avatar           : "profile.png"
+  avatar           : # "profile.png"
   name             : "Binze Hu(胡彬泽)"
   pronouns         : "he/his"  
   bio              : # "A student who is actively exploring"
